[package]
name = "actix-diesel"
description = "Integrate Diesel into Actix (and Actix Web) cleanly and efficiently."
repository = "https://github.com/mehcode/actix-diesel"
license = "MIT/Apache-2.0"
version = "0.3.1-alpha.0"
keywords = ["web", "actix", "async", "diesel", "database"]
categories = ["asynchronous", "web-programming::http-server", "database"]
readme = "README.md"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.2", features = [ "r2d2" ] }
actix = "0.8.3"
num_cpus = "1.10.1"
once_cell = "1.1.0"
futures = "0.1.29"
derive_more = "0.15.0"
r2d2 = "0.8.5"
actix-web = { version = "1.0.7", optional = true }
failure = { version = "0.1.5", optional = true }
