[package]
name = "actix-diesel"
description = "Integrate Diesel into Actix (and Actix Web) cleanly and efficiently."
repository = "https://github.com/mehcode/actix-diesel"
license = "MIT/Apache-2.0"
version = "0.3.1-alpha.0"
keywords = ["web", "actix", "async", "diesel", "database"]
categories = ["asynchronous", "web-programming::http-server", "database"]
readme = "README.md"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.5", features = [ "r2d2" ] }
# Pin dependency to avoid compilation errors since actix 0.11.0-beta.1 is not compatible with actix-rt 2.0 later than beta.2
actix = "=0.11.0-beta.1"
actix-rt = "=2.0.0-beta.2"
num_cpus = "1.13.0"
once_cell = "1.4.1"
futures = "0.3.5"
derive_more = "0.99.10"
r2d2 = "0.8.9"
actix-web = { version = "4.0.0-beta.1", optional = true }
failure = { version = "0.1.8", optional = true }
