[package]
name = "example"
version = "0.1.0"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.3.3", features = [ "sqlite" ] }
actix-web = "0.7.17"
actix-diesel = { path = "..", features = [ "actix-web" ] }
pretty_env_logger = "0.3.0"
failure = "0.1.3"
actix-web-async-await = "0.2.0"
serde = { version = "1.0.83", features = [ "derive" ] }
dotenv = "0.13.0"

[patch.crates-io]
# https://github.com/tokio-rs/tokio/pull/814
tokio-async-await = { git = "https://github.com/balthild/tokio", rev = "f00a9ab24c948c6c5c7a769eb894480faa425866" }
