[package]
name = "example"
version = "0.1.1"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.2", features = [ "sqlite" ] }
actix-web = "1.0.7"
actix-diesel = { path = "..", features = [ "actix-web" ] }
pretty_env_logger = "0.3.1"
failure = "0.1.5"
serde = { version = "1.0.100", features = [ "derive" ] }
dotenv = "0.14.1"
futures-preview = { version = "0.3.0-alpha.18", features = [ "compat" ] }
